--- a/testing_colab.ipynb
+++ b/testing_colab.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMnpdJLt6pnr7ibrgySiVuW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +37,117 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "oz8P6eUzj9EO"
+        "id": "oz8P6eUzj9EO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a69b107-70f6-46ff-862c-16f96c8908cc"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world!\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"hello world!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "print(x)\n",
+        "y = 6\n",
+        "y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yYOjR4Fanz1Q",
+        "outputId": "9682726f-eaa4-4071-e096-218416962101"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Testing the Colab features"
+      ],
+      "metadata": {
+        "id": "quFvbo1NoTqs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x+5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HBuTWMZOn8WS",
+        "outputId": "aa2797da-4f14-4882-94ff-215148a531a0"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(5+10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0t5l0q7_oKuX",
+        "outputId": "ab3b9702-18ba-42bc-9b93-03288641a053"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ]
     }
   ]
 }
